# azure-devops-backup-utility

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  DISASTER_RECOVERY.md  LICENSE  README.md  azure-pipelines.yml  pyproject.toml
.github/workflows/: backup.yml  deploy-website.yml
dashboard/: .funcignore  README.md  local.settings.json.example  requirements.txt
dashboard/api/: __init__.py  function_app.py
dashboard/frontend/: app.js  demo.html  index.html  style.css
examples/: azure-pipelines-blob-storage.yml  azure-pipelines.yml  config.yaml  github-actions-backup.yml  github-actions-blob-storage.yml  github-actions-s3.yml  restore-repos.sh
src/: __init__.py  __main__.py  azcli.py  cli.py  compress.py  config.py  inventory.py  orchestrator.py  paginator.py  paths.py  redact.py  verify.py  writers.py
src/ado_backup/: __main__.py  azcli.py  backoff.py  cli.py  config.py  inventory.py  orchestrator.py  redact.py
src/scopes/: artifacts.py  boards.py  dashboards.py  git.py  org.py  permissions.py  pipelines.py  projects.py  testplans.py  (+2 more)
tests/: test_azcli.py  test_backoff.py  test_compress.py  test_config.py  test_inventory.py  test_paginator.py  test_paths.py  test_redact.py  test_scopes_artifacts.py  test_scopes_boards.py  test_scopes_dashboards.py  test_scopes_git.py  test_scopes_org.py  test_scopes_permissions.py  test_scopes_pipelines.py  test_scopes_projects.py  test_scopes_pull_requests.py  test_scopes_testplans.py  test_scopes_wikis.py  test_verify.py  test_writers.py
website/: README.md  contributing.md  demo.md  index.md  package-lock.json  package.json
(+23 files in other folders)
