[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ado-backup"
version = "0.1.0"
description = "Azure DevOps Backup Utility – backs up organizations, projects, repos, boards, pipelines and more using only Azure CLI."
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
ado-backup = "ado_backup.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
